batch bugfixes